--- a/RentalCarAPI/RentalCarAPI.csproj
+++ b/RentalCarAPI/RentalCarAPI.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Upload\Images\" />
+  </ItemGroup>
+
 </Project>
