--- a/RentalCarAPI/appsettings.json
+++ b/RentalCarAPI/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenOptions": {
+    "Audience": "kerimcan@kerim.com",
+    "Issuer": "kerimcan@kerim.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "kerimkerimkerimkerim1234"
+
+  },
   "AllowedHosts": "*"
 }
